--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "PortfolioSimo-Backend",
   "version": "1.0.0",
   "description": "",
+  "type": "module",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -20,6 +21,8 @@
   },
   "homepage": "https://github.com/lunisel/PortfolioSimo-Backend#readme",
   "dependencies": {
+    "body-parser": "^1.19.1",
+    "cloudinary": "^1.27.1",
     "cors": "^2.8.5",
     "express": "^4.17.2",
     "express-list-endpoints": "^6.0.0",
