--- a/.env
+++ b/.env
@@ -1,2 +1,6 @@
 PORT = 3005
 MONGO_URL = mongodb+srv://luna:retrete@cluster0.qfwvf.mongodb.net/RisiGraph?retryWrites=true&w=majority
+
+CLOUDINARY_NAME=lunisel
+CLOUDINARY_API=679366839372538
+CLOUDINARY_SECRET=Mt3IyheCu-S1sjQUPbRye_GjbFA
